--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,6 @@ certifi==2017.7.27.1      # via requests
 cffi==1.10.0              # via cryptography
 chardet==3.0.4            # via requests
 cryptography==2.0.3       # via django-payments
-defusedxml==0.5.0         # via python3-openid, social-auth-core
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 django-bootstrap3==9.0.0
@@ -56,7 +55,9 @@ markdown==2.6.9
 maxminddb-geolite2==2017.803
 maxminddb==1.3.0
 mock==2.0.0
+multidict==3.3.0          # via yarl
 oauthlib==2.0.4           # via requests-oauthlib, social-auth-core
+olefile==0.44             # via pillow
 pbr==3.1.1                # via mock
 pillow==4.0.0             # via django-versatileimagefield
 prices==0.5.9
@@ -67,17 +68,19 @@ py==1.4.34                # via pytest
 pycparser==2.18           # via cffi
 pyjwt==1.5.3              # via django-payments, social-auth-core
 pytest-django==3.1.2
+pytest-vcr==0.3.0
 pytest==3.2.2
 python-dateutil==2.6.1    # via botocore, faker
-python3-openid==3.1.0     # via social-auth-core
+python-openid==2.2.5      # via social-auth-core
 pytz==2017.2              # via babel, celery, django
+pyyaml==3.12              # via vcrpy
 redis==2.10.6             # via celery, django-redis
 requests-oauthlib==0.8.0  # via social-auth-core
 requests==2.18.4
 s3transfer==0.1.10        # via boto3
 satchless==1.1.3
 singledispatch==3.4.0.3   # via graphene-django
-six==1.11.0               # via cryptography, django-templated-email, faker, graphene, graphene-django, graphql-core, graphql-relay, mock, promise, purl, python-dateutil, singledispatch, social-auth-app-django, social-auth-core
+six==1.11.0               # via cryptography, django-templated-email, faker, graphene, graphene-django, graphql-core, graphql-relay, mock, promise, purl, python-dateutil, singledispatch, social-auth-app-django, social-auth-core, vcrpy
 social-auth-app-django==1.2.0
 social-auth-core==1.4.0   # via social-auth-app-django
 stripe==1.65.0            # via django-payments
@@ -86,5 +89,8 @@ text-unidecode==1.0
 typing==3.6.2             # via promise
 urllib3==1.22             # via elasticsearch, requests
 uwsgi==2.0.15
+vcrpy==1.11.1             # via pytest-vcr
 vine==1.1.4               # via amqp
+wrapt==1.10.11            # via vcrpy
 xmltodict==0.11.0         # via django-payments
+yarl==0.13.0              # via vcrpy
