--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-bootstrap3==9.0.0
 django-cache-url==1.3.1
 django-celery-results==1.0.1
 django-countries==4.6.1
+django-debug-toolbar==1.9.1
 django-filter==1.0.4
 django-mptt==0.8.7
 django-payments==0.11.0.3
@@ -57,6 +58,7 @@ maxminddb-geolite2==2017.803
 maxminddb==1.3.0
 mock==2.0.0
 oauthlib==2.0.4           # via requests-oauthlib, social-auth-core
+olefile==0.44             # via pillow
 pbr==3.1.1                # via mock
 pillow==4.0.0             # via django-versatileimagefield
 prices==0.5.9
@@ -80,6 +82,7 @@ singledispatch==3.4.0.3   # via graphene-django
 six==1.11.0               # via cryptography, django-templated-email, faker, graphene, graphene-django, graphql-core, graphql-relay, mock, promise, purl, python-dateutil, singledispatch, social-auth-app-django, social-auth-core
 social-auth-app-django==1.2.0
 social-auth-core==1.4.0   # via social-auth-app-django
+sqlparse==0.2.4           # via django-debug-toolbar
 stripe==1.65.0            # via django-payments
 suds-jurko==0.6           # via django-payments
 text-unidecode==1.0
